--- a/Python_Loops_and_its_Operation.ipynb
+++ b/Python_Loops_and_its_Operation.ipynb
@@ -59,6 +59,77 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "count = 0\n",
+        "while count < 5:\n",
+        "    print(count)\n",
+        "    count = count + 1\n",
+        ""
+      ],
+      "metadata": {
+        "id": "7fcMwDh1pbRo",
+        "outputId": "df9faa3b-9480-4a1f-9058-90f35302c1d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "person = {\n",
+        "    'first_name' : 'Asabeneh',\n",
+        "    'last_name' : 'Yetayeh',\n",
+        "    'city' : 'Helsinki'\n",
+        "    'Language' : 'Python'\n",
+        "}\n",
+        "for key in person:\n",
+        "    print(key)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "C-LIB1_Npmn6",
+        "outputId": "006a622a-0316-43aa-ab8f-f9581ccef140",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-2-7bbdfe1814bf>, line 5)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-7bbdfe1814bf>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    'Language' : 'Python'\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "SjObzHlupt9C"
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### While Loop\n",
@@ -463,6 +534,312 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# using for loop\n",
+        "for i in range(11):\n",
+        "    print(i)\n"
+      ],
+      "metadata": {
+        "id": "0NDvK3nhtGCW",
+        "outputId": "6a0019c4-15c8-4fb5-d9fe-9d9f70642550",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#using while\n",
+        "i = 0\n",
+        "while i <= 10:\n",
+        "    print(i)\n",
+        "    i += 1\n"
+      ],
+      "metadata": {
+        "id": "USKIr95mt8A_",
+        "outputId": "93b70f63-9c5f-46f7-b8d7-3fcf8d1da404",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#using for loop\n",
+        "for i in range(10, -1, -1):\n",
+        "    print(i)\n"
+      ],
+      "metadata": {
+        "id": "aM9_oVgGuL4c",
+        "outputId": "dc34c936-4edb-47d4-a2db-c36773114ee4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "9\n",
+            "8\n",
+            "7\n",
+            "6\n",
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n",
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#using while\n",
+        "i = 10\n",
+        "while i >= 0:\n",
+        "    print(i)\n",
+        "    i -= 1"
+      ],
+      "metadata": {
+        "id": "QnpC9KN_uYpd",
+        "outputId": "ad23add1-7f1e-4b1b-dbd1-906b42483f19",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "9\n",
+            "8\n",
+            "7\n",
+            "6\n",
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n",
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#this is the loop that wil print the triangle\n",
+        "for i in range(1, 8):\n",
+        "    print('#' * i)"
+      ],
+      "metadata": {
+        "id": "75_VdDQVusOu",
+        "outputId": "a805890d-4650-452e-95f2-0bb3fc0fc055",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "#\n",
+            "##\n",
+            "###\n",
+            "####\n",
+            "#####\n",
+            "######\n",
+            "#######\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#using  nested loop\n",
+        "for i in range(8):\n",
+        "    for j in range(8):\n",
+        "        print(\"#\", end=\" \")\n",
+        "    print()\n",
+        "\n",
+        "    # i creates the rows\n",
+        "    # j creates the rows\n"
+      ],
+      "metadata": {
+        "id": "UVlRAWnRu_U-",
+        "outputId": "1b1b55e2-ed90-455e-aa04-fe19efdf6cff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "# # # # # # # # \n",
+            "# # # # # # # # \n",
+            "# # # # # # # # \n",
+            "# # # # # # # # \n",
+            "# # # # # # # # \n",
+            "# # # # # # # # \n",
+            "# # # # # # # # \n",
+            "# # # # # # # # \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# this will output the multiplied factors\n",
+        "for i in range(11):\n",
+        "    print(f\"{i} x {i} = {i * i}\")\n"
+      ],
+      "metadata": {
+        "id": "GAUyY_TgvxCa",
+        "outputId": "0a4cfb1c-c2bd-4c7f-9721-d225fcc63f8d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 x 0 = 0\n",
+            "1 x 1 = 1\n",
+            "2 x 2 = 4\n",
+            "3 x 3 = 9\n",
+            "4 x 4 = 16\n",
+            "5 x 5 = 25\n",
+            "6 x 6 = 36\n",
+            "7 x 7 = 49\n",
+            "8 x 8 = 64\n",
+            "9 x 9 = 81\n",
+            "10 x 10 = 100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#iterate through the list and output items\n",
+        "technologies = ['Python', 'Numpy','Pandas','Django', 'Flask']\n",
+        "for i in technologies:\n",
+        "    print(i)"
+      ],
+      "metadata": {
+        "id": "mJtwYEiE0uzr",
+        "outputId": "73f3163f-8930-445f-827f-32299b3f98f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python\n",
+            "Numpy\n",
+            "Pandas\n",
+            "Django\n",
+            "Flask\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#iterate from 0 to 100 and print even numbers\n",
+        "for i in range(101):\n",
+        "    if i % 2 == 0:\n",
+        "        print(i)"
+      ],
+      "metadata": {
+        "id": "7L3y2tck07mo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#iterate from 0 to 100 and print even numbers\n",
+        "for i in range(101):\n",
+        "    if i % 2 != 0:\n",
+        "        print(i)"
+      ],
+      "metadata": {
+        "id": "dXRm_4P71DVO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Exercises: Level 1\n",
@@ -517,6 +894,70 @@
       "metadata": {
         "id": "pi0aaIqihHoN"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#iterate 0 to 100 and output sum\n",
+        "sum = 0\n",
+        "\n",
+        "for i in range(101):\n",
+        "    sum += i\n",
+        "\n",
+        "print(sum)\n"
+      ],
+      "metadata": {
+        "id": "zbZJDvdg1Pcz",
+        "outputId": "3093aa37-819f-49df-d27b-b6d8e6ed7aa9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5050\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#using for loop to iterate 0 to 100 and print sum of all evens and odds\n",
+        "sum_even = 0\n",
+        "sum_odd = 0\n",
+        "\n",
+        "for i in range(101):\n",
+        "    if i % 2 == 0:\n",
+        "        sum_even += i\n",
+        "    else:\n",
+        "        sum_odd += i\n",
+        "\n",
+        "print(sum_even)\n",
+        "print(sum_odd)\n"
+      ],
+      "metadata": {
+        "id": "jg_QBHew1wLR",
+        "outputId": "b66378fa-2d12-4dbc-f95f-9d56a710d5ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2550\n",
+            "2500\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
