--- a/Python_Loops_and_its_Operation.ipynb
+++ b/Python_Loops_and_its_Operation.ipynb
@@ -68,11 +68,11 @@
         ""
       ],
       "metadata": {
-        "id": "7fcMwDh1pbRo",
-        "outputId": "df9faa3b-9480-4a1f-9058-90f35302c1d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7fcMwDh1pbRo",
+        "outputId": "df9faa3b-9480-4a1f-9058-90f35302c1d7"
       },
       "execution_count": 1,
       "outputs": [
@@ -93,31 +93,50 @@
       "cell_type": "code",
       "source": [
         "person = {\n",
-        "    'first_name' : 'Asabeneh',\n",
-        "    'last_name' : 'Yetayeh',\n",
-        "    'city' : 'Helsinki'\n",
-        "    'Language' : 'Python'\n",
+        "    'first_name':'Asabeneh',\n",
+        "    'last_name':'Yetayeh',\n",
+        "    'age':250,\n",
+        "    'country':'Finland',\n",
+        "    'is_marred':True,\n",
+        "    'skills':['JavaScript', 'React', 'Node', 'MongoDB', 'Python'],\n",
+        "    'address':{\n",
+        "        'street':'Space street',\n",
+        "        'zipcode':'02210'\n",
+        "    }\n",
         "}\n",
         "for key in person:\n",
         "    print(key)\n",
-        ""
+        "\n",
+        "for key, value in person.items():\n",
+        "    print(key, value) # this way we get both keys and values printed out"
       ],
       "metadata": {
-        "id": "C-LIB1_Npmn6",
-        "outputId": "006a622a-0316-43aa-ab8f-f9581ccef140",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C-LIB1_Npmn6",
+        "outputId": "bf18d780-5d86-4b82-e466-8a573f4ec326"
       },
-      "execution_count": 2,
+      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-2-7bbdfe1814bf>, line 5)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-7bbdfe1814bf>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    'Language' : 'Python'\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "first_name\n",
+            "last_name\n",
+            "age\n",
+            "country\n",
+            "is_marred\n",
+            "skills\n",
+            "address\n",
+            "first_name Asabeneh\n",
+            "last_name Yetayeh\n",
+            "age 250\n",
+            "country Finland\n",
+            "is_marred True\n",
+            "skills ['JavaScript', 'React', 'Node', 'MongoDB', 'Python']\n",
+            "address {'street': 'Space street', 'zipcode': '02210'}\n"
           ]
         }
       ]
@@ -542,11 +561,11 @@
         "    print(i)\n"
       ],
       "metadata": {
-        "id": "0NDvK3nhtGCW",
-        "outputId": "6a0019c4-15c8-4fb5-d9fe-9d9f70642550",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0NDvK3nhtGCW",
+        "outputId": "6a0019c4-15c8-4fb5-d9fe-9d9f70642550"
       },
       "execution_count": 5,
       "outputs": [
@@ -579,11 +598,11 @@
         "    i += 1\n"
       ],
       "metadata": {
-        "id": "USKIr95mt8A_",
-        "outputId": "93b70f63-9c5f-46f7-b8d7-3fcf8d1da404",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "USKIr95mt8A_",
+        "outputId": "93b70f63-9c5f-46f7-b8d7-3fcf8d1da404"
       },
       "execution_count": 7,
       "outputs": [
@@ -614,11 +633,11 @@
         "    print(i)\n"
       ],
       "metadata": {
-        "id": "aM9_oVgGuL4c",
-        "outputId": "dc34c936-4edb-47d4-a2db-c36773114ee4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aM9_oVgGuL4c",
+        "outputId": "dc34c936-4edb-47d4-a2db-c36773114ee4"
       },
       "execution_count": 8,
       "outputs": [
@@ -651,11 +670,11 @@
         "    i -= 1"
       ],
       "metadata": {
-        "id": "QnpC9KN_uYpd",
-        "outputId": "ad23add1-7f1e-4b1b-dbd1-906b42483f19",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QnpC9KN_uYpd",
+        "outputId": "ad23add1-7f1e-4b1b-dbd1-906b42483f19"
       },
       "execution_count": 9,
       "outputs": [
@@ -686,11 +705,11 @@
         "    print('#' * i)"
       ],
       "metadata": {
-        "id": "75_VdDQVusOu",
-        "outputId": "a805890d-4650-452e-95f2-0bb3fc0fc055",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "75_VdDQVusOu",
+        "outputId": "a805890d-4650-452e-95f2-0bb3fc0fc055"
       },
       "execution_count": 11,
       "outputs": [
@@ -722,11 +741,11 @@
         "    # j creates the rows\n"
       ],
       "metadata": {
-        "id": "UVlRAWnRu_U-",
-        "outputId": "1b1b55e2-ed90-455e-aa04-fe19efdf6cff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UVlRAWnRu_U-",
+        "outputId": "1b1b55e2-ed90-455e-aa04-fe19efdf6cff"
       },
       "execution_count": 12,
       "outputs": [
@@ -755,10 +774,10 @@
       ],
       "metadata": {
         "id": "GAUyY_TgvxCa",
-        "outputId": "0a4cfb1c-c2bd-4c7f-9721-d225fcc63f8d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0a4cfb1c-c2bd-4c7f-9721-d225fcc63f8d"
       },
       "execution_count": 21,
       "outputs": [
@@ -790,11 +809,11 @@
         "    print(i)"
       ],
       "metadata": {
-        "id": "mJtwYEiE0uzr",
-        "outputId": "73f3163f-8930-445f-827f-32299b3f98f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mJtwYEiE0uzr",
+        "outputId": "73f3163f-8930-445f-827f-32299b3f98f4"
       },
       "execution_count": 22,
       "outputs": [
@@ -907,11 +926,11 @@
         "print(sum)\n"
       ],
       "metadata": {
-        "id": "zbZJDvdg1Pcz",
-        "outputId": "3093aa37-819f-49df-d27b-b6d8e6ed7aa9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zbZJDvdg1Pcz",
+        "outputId": "3093aa37-819f-49df-d27b-b6d8e6ed7aa9"
       },
       "execution_count": 28,
       "outputs": [
@@ -941,11 +960,11 @@
         "print(sum_odd)\n"
       ],
       "metadata": {
-        "id": "jg_QBHew1wLR",
-        "outputId": "b66378fa-2d12-4dbc-f95f-9d56a710d5ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jg_QBHew1wLR",
+        "outputId": "b66378fa-2d12-4dbc-f95f-9d56a710d5ed"
       },
       "execution_count": 31,
       "outputs": [
